--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "charybdis",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -7,6 +8,8 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.0.1",
+    "@nuxtjs/tailwindcss": "^5.1.2",
     "nuxt": "3.0.0-rc.3"
   }
 }
