--- a/package.json
+++ b/package.json
@@ -4,12 +4,27 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "lint:scripts": "eslint --ext .ts,.js,.vue .",
+    "lint:styles": "stylelint \"**/*.{css,html,vue}\"",
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/tailwindcss": "^5.1.2",
-    "nuxt": "3.0.0-rc.3"
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-vue": "^9.1.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.0",
+    "nuxt": "3.0.0-rc.3",
+    "prettier": "^2.6.2",
+    "stylelint": "^14.8.5",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "typescript": "^4.7.3"
   }
 }
